tests/should_fail/match_tuple_pattern_on_int.nv
module test
// match: tuple pattern on Int type
fn bad(n: Int) -> Int {
    return match n {
        (a, b) => a + b,
        _      => 0
    }
}
